--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-parallax": "^3.5.1",
     "react-redux": "^9.1.2",
     "swiper": "^11.1.7",
     "vite-plugin-svgr": "^4.2.0"
