--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-parallax": "^3.5.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "swiper": "^11.1.12",
     "vite-plugin-svgr": "^4.2.0"
   },
